# NeuralNetwork

./: .clang-format  .gitignore  .gitmodules  ActivationFunction.cpp  ActivationFunction.h  CMakeLists.txt  Layer.cpp  Layer.h  LossFunction.cpp  LossFunction.h  NeuralNetwork.cpp  NeuralNetwork.h  main.cpp  neural_network.h
src/: ActivationFunction.cpp  ActivationFunction.h  CMakeLists.txt  Layer.cpp  Layer.h  LossFunction.cpp  LossFunction.h  NeuralNetwork.cpp  NeuralNetwork.h
test/: CMakeLists.txt  except.cpp  except.h  main.cpp  maintest.cpp  mnist_train.h
